added support for ASIN list
