# server/api/interfaces/iscraper.ts
@@ -5,8 +5,12 @@ import { Observable } from 'rxjs';
  */
 interface IScraper {
   getScrapedData(url: string): Observable<any>;
+
+  getScrapedListData(asinList: string): Observable<any>;
+
+  push(name: string, data: string): Observable<any>;
+
+  byMicrositeByID(name: string): Observable<any>;
 }
-
-
 
 export default IScraper;
